# mmm

./: README.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: app.py  config.py  wsgi.py
backend/src/domain/: Ciqual.py  Dessert.py  Encas.py  Entree.py  Inscrit.py  MembreFamille.py  Menu.py  PAT.py  PartenaireSanteClimat.py  PetitDejeuner.py  Plat.py  Preferences.py  ProgrammeHebdomadaire.py  User.py  Vinaigrette.py
backend/src/rest/: AccountResource.py  CiqualResource.py  DessertResource.py  EncasResource.py  EntreeResource.py  FrontendResource.py  InscritResource.py  MembreFamilleResource.py  MenuResource.py  PATResource.py  PartenaireSanteClimatResource.py  PetitDejeunerResource.py  PlatResource.py  PreferencesResource.py  ProgrammeHebdomadaireResource.py  UserResource.py  VinaigretteResource.py  __init__.py
backend/src/schema/: CiqualSchema.py  DessertSchema.py  EncasSchema.py  EntreeSchema.py  InscritSchema.py  MembreFamilleSchema.py  MenuSchema.py  PATSchema.py  PartenaireSanteClimatSchema.py  PetitDejeunerSchema.py  PlatSchema.py  PreferencesSchema.py  ProgrammeHebdomadaireSchema.py  UserSchema.py  VinaigretteSchema.py
backend/src/templates/: activated.html  activation.html  resetPassword.html
backend/src/utils/: Account.py  DataLoader.py  Loaders.py  MMMUtils.py  MailConfiguration.py  SecurityUtils.py
backend/test/: conftest.py
backend/test/functional_tests/: test_AccountResource.py  test_FrontendResource.py
backend/test/templates/: activated.html  resetEmail.html  resetPassword.html
docker/: docker-compose.yml
(+104 files in other folders)
